--- a/notebooks/analise.ipynb
+++ b/notebooks/analise.ipynb
@@ -632,9 +632,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2971ee48",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(12, 8))\n",
@@ -676,9 +674,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bdc28ee",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.lmplot(x = 'satisfaction', \n",
@@ -816,9 +812,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ca724249",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(10, 6))\n",
@@ -983,7 +977,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -997,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
