--- a/notebooks/modelagem_dados_ohlc.ipynb
+++ b/notebooks/modelagem_dados_ohlc.ipynb
@@ -210,6 +210,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mInit signature:\u001b[0m \u001b[0mSelectKBest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscore_func\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m<\u001b[0m\u001b[0mfunction\u001b[0m \u001b[0mf_classif\u001b[0m \u001b[0mat\u001b[0m \u001b[1;36m0x00000293C67D51F0\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m     \n",
+       "Select features according to the k highest scores.\n",
+       "\n",
+       "Read more in the :ref:`User Guide <univariate_feature_selection>`.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "score_func : callable, default=f_classif\n",
+       "    Function taking two arrays X and y, and returning a pair of arrays\n",
+       "    (scores, pvalues) or a single array with scores.\n",
+       "    Default is f_classif (see below \"See Also\"). The default function only\n",
+       "    works with classification tasks.\n",
+       "\n",
+       "    .. versionadded:: 0.18\n",
+       "\n",
+       "k : int or \"all\", default=10\n",
+       "    Number of top features to select.\n",
+       "    The \"all\" option bypasses selection, for use in a parameter search.\n",
+       "\n",
+       "Attributes\n",
+       "----------\n",
+       "scores_ : array-like of shape (n_features,)\n",
+       "    Scores of features.\n",
+       "\n",
+       "pvalues_ : array-like of shape (n_features,)\n",
+       "    p-values of feature scores, None if `score_func` returned only scores.\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> from sklearn.datasets import load_digits\n",
+       ">>> from sklearn.feature_selection import SelectKBest, chi2\n",
+       ">>> X, y = load_digits(return_X_y=True)\n",
+       ">>> X.shape\n",
+       "(1797, 64)\n",
+       ">>> X_new = SelectKBest(chi2, k=20).fit_transform(X, y)\n",
+       ">>> X_new.shape\n",
+       "(1797, 20)\n",
+       "\n",
+       "Notes\n",
+       "-----\n",
+       "Ties between features with equal scores will be broken in an unspecified\n",
+       "way.\n",
+       "\n",
+       "See Also\n",
+       "--------\n",
+       "f_classif : ANOVA F-value between label/feature for classification tasks.\n",
+       "mutual_info_classif : Mutual information for a discrete target.\n",
+       "chi2 : Chi-squared stats of non-negative features for classification tasks.\n",
+       "f_regression : F-value between label/feature for regression tasks.\n",
+       "mutual_info_regression : Mutual information for a continuous target.\n",
+       "SelectPercentile : Select features based on percentile of the highest\n",
+       "    scores.\n",
+       "SelectFpr : Select features based on a false positive rate test.\n",
+       "SelectFdr : Select features based on an estimated false discovery rate.\n",
+       "SelectFwe : Select features based on family-wise error rate.\n",
+       "GenericUnivariateSelect : Univariate feature selector with configurable\n",
+       "    mode.\n",
+       "\u001b[1;31mFile:\u001b[0m           c:\\users\\btk\\anaconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py\n",
+       "\u001b[1;31mType:\u001b[0m           ABCMeta\n",
+       "\u001b[1;31mSubclasses:\u001b[0m     \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "SelectKBest?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -221,7 +309,8 @@
    "hash": "e5752ecff69a9202d550b914c9ad4e8fc93a5814f1e813458bd9560625d0de9b"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('ml_env': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -235,9 +324,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
